2009-03-22  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::updateGroups): fixed bug #2701593
	"gui problem". Adding a rule to a policy with rule groups caused
	weird rule display - a rule immediately above rule group header
	would appear empty, with only "Source" shoring.

2009-03-19  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (safetyNetInstall): fixed bug #2694146: "IPv6
	temporary ACL blocks ICMPv6". Temporary ipv6 access list created
	for the "safety net install" should permit icmp.

2009-03-18  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (safetyNetInstall): fixed bug #2694440 "Multiple
	policies cause multiple temporary ACLs": when "safety net install"
	option is used, temporary access list must be generated only once
	even when firewall object has multiple rulesets.

	* PolicyCompiler_iosacl.cpp (PolicyCompiler_iosacl::prolog): fixed
	bug #2694432 "IOS ACL syntax error with IPv6 host addresses &
	"safety net"": temporary access list created for IOS when option
	"safety net install" is used and ipv6 address is provided should
	use keyword "host" if provided address does not specify netmask.

	* fwbedit: properly saving data file after "checktree" operation

2009-03-17  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl.cpp (PolicyCompiler_iosacl::prolog): fixed
	bug #2689978: "IOS ACL 'safety net' doesn't support
	IPv6?". Compiler did not process properly ipv6 address entered in
	the "safety net" install script option parameter.

	* iosaclAdvancedDialog.cpp, pixAdvancedDialog.cpp: fixed bug
	#2689987: "Typo in "script options" tab in 'Firewall settings'".

	* IPv6Dialog.cpp (IPv6Dialog::changed): fixed bug #2689958 "Error
	changing properties of a IPv6 address". Button "Apply" would stay
	greyed out when user changed network prefix length in IPv6 address
	dialog.

2009-03-12  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl.cpp (PolicyCompiler_iosacl::prolog): fixed